# Moy

./: .gitignore  CMakeLists.txt  moyc.cpp
examples/: inline.moy
include/: CMakeLists.txt
include/moy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  MoyCombine.td  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h
mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  MoyCombine.cpp  ShapeInferencePass.cpp
parser/: AST.cpp
